--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
-body {
+
+html, body { 
+  margin:0; 
+  padding:0; 
+  height:100%; 
+}
+
+/* body {
   width: 1230px;
   margin: 20px auto;
   font-family: Georgia;
-}
+  background-color: slategrey;
+} */
 
 h1 {
   margin: 0;
@@ -21,4 +29,100 @@ a {
 
 iframe {
   border: 1px solid black;
+}
+
+#mainDiv {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #333333;
+  flex: 1;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  color: white;
+  /* border:  1px solid green; */
+}
+
+#headerDiv {
+  display: flex;
+  flex-direction: row;
+  border:  2px solid blue;
+  color: white;
+  background-color: slategrey;
+  }
+
+#imageDiv {
+  display: flex;  
+  flex: 1;
+  padding-top: 0px;
+}
+
+#titleDiv {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: left; */
+  /* padding-top: 10px; */
+  flex: 3;
+}
+
+#sewerReportDiv {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  /* height: 100%; */
+  height: 100vh; 
+  /* position: absolute; */
+  overflow: hidden;
+}
+
+#sewerReportInputDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  flex: 3;
+  /* border:  1px solid red; */
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow-y: scroll;
+}
+
+#sewerReportPreviewDiv {
+  flex: 2;
+  /* border:  2px solid yellow; */
+  margin-left: 20px;
+}
+
+.alignedLabels {
+  display: inline-block;
+  width: 140px;
+  text-align: right;
+  margin-right: 10px;
+}
+
+#totalReplacementCostLabel {
+  display: inline-block;
+  width: 240px;
+  text-align: right;
+  margin-right: 10px;
+}
+
+button {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  align-self: center;
+  width: 150px;
+  height: 40px;
+  background-color: blue;
+  color: white;
+  min-height: 40px;
+  margin: 20px;
+}
+
+#buttonDiv {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
