--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,6 @@ html, body {
   height:100%; 
 }
 
-/* body {
-  width: 1230px;
-  margin: 20px auto;
-  font-family: Georgia;
-  background-color: slategrey;
-} */
-
 h1 {
   margin: 0;
 }
@@ -61,8 +54,6 @@ iframe {
 #titleDiv {
   display: flex;
   flex-direction: column;
-  /* justify-content: left; */
-  /* padding-top: 10px; */
   flex: 3;
 }
 
@@ -70,9 +61,7 @@ iframe {
   display: flex;
   flex-direction: row;
   flex: 1;
-  /* height: 100%; */
   height: 100vh; 
-  /* position: absolute; */
   overflow: hidden;
 }
 
@@ -81,7 +70,6 @@ iframe {
   flex-direction: column;
   align-items: left;
   flex: 3;
-  /* border:  1px solid red; */
   padding-left: 20px;
   padding-right: 20px;
   overflow-y: scroll;
@@ -89,7 +77,6 @@ iframe {
 
 #sewerReportPreviewDiv {
   flex: 2;
-  /* border:  2px solid yellow; */
   margin-left: 20px;
 }
 
@@ -107,7 +94,7 @@ iframe {
   margin-right: 10px;
 }
 
-button {
+.footerButton {
   margin-top: 20px;
   margin-bottom: 20px;
   align-self: center;
@@ -125,4 +112,14 @@ button {
   align-self: center;
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+#videoEntryDiv {
+  display: inline-block;
+}
+
+.videoButtons {
+  width: 30px;
+  height: 23px;
+  text-align: center;
 }
